[metadata]
name = quantcast
description = returns the most active cookies given a log file
author = Kai Yun
url = https://github.com/kaiyun717/quantcast
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = quantcast
install_requires =
    requests >= 2
python_requires = >= 3.6, <4
package_dir =
    =src